ghc-4335c07/testsuite/tests/patsyn/should_fail/T13349.hs
{-# LANGUAGE PatternSynonyms #-}

module T13349 where

{-# COMPLETE False #-}
