ghc-4335c07/testsuite/tests/patsyn/should_fail/T13349.stderr

T13349.hs:5:1: error:
    • Orphan COMPLETE pragmas not supported
      A COMPLETE pragma must mention at least one data constructor
      or pattern synonym defined in the same module.
    • In {-# COMPLETE False #-}
